--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                       class="navbar-toggler"
                       type="button"
                       data-toggle="collapse"
-                      data-target="#collapsibleNavbar"
+                      data-target="#navMain"
                     >
                       <span class="navbar-toggler-icon"
                         ><i
@@ -369,7 +369,7 @@
                         ></i
                       ></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <div class="collapse navbar-collapse" id="navMain">
                         <div class="scroll-prdt">
                           <div class="brand-prdt border-bottom">
                             <h6 class="title-filter">Chipset</h6>
@@ -649,7 +649,7 @@
                       class="navbar-toggler"
                       type="button"
                       data-toggle="collapse"
-                      data-target="#collapsibleNavbar"
+                      data-target="#navRam"
                     >
                       <span class="navbar-toggler-icon"
                         ><i
@@ -659,7 +659,7 @@
                         ></i
                       ></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <div class="collapse navbar-collapse" id="navRam">
                         <div class="scroll-prdt">
 
                           <div class="brand-prdt mt-2 border-bottom">
