--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <div class="container-fluid  mb-5 ">
               <div class="row">
                 <div class="col-lg-4 col-sm-12 ">
-                  <nav class="navbar navbar-expand-sm navbar-dark">
+                  <nav class="navbar navbar-expand-lg navbar-dark">
                     <button
-                      class="navbar-toggler"
+                      class="navbar-toggler d-lg-none"
                       type="button"
                       data-toggle="collapse"
                       data-target="#collapsibleNavbar"
@@ -354,7 +354,7 @@
             <div class="container-fluid  mb-5 ">
               <div class="row">
                 <div class="col-lg-4 col-sm-12 ">
-                  <nav class="navbar navbar-expand-sm navbar-dark">
+                  <nav class="navbar navbar-expand-lg navbar-dark">
                     <button
                       class="navbar-toggler"
                       type="button"
@@ -644,7 +644,7 @@
             <div class="container-fluid  mb-5 ">
               <div class="row">
                 <div class="col-lg-4 col-sm-12 ">
-                  <nav class="navbar navbar-expand-sm navbar-dark">
+                  <nav class="navbar navbar-expand-lg navbar-dark">
                     <button
                       class="navbar-toggler"
                       type="button"
