--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                   <tr>
                     <th scope="row" class="title-prd">7. CASE - VỎ MÁY TÍNH</th>
                     <td>
-                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#case"id="buttoncase">
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#vo"id="buttonvo">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
                             Chọn CASE - Vỏ máy tính
                         </button>
-                        <div id="selectedCase" style="list-style-type: none;"></div>
+                        <div id="selectedVo" style="list-style-type: none;"></div>
                     </td>
                   </tr>
                   <tr>
@@ -1354,8 +1354,8 @@
       </div>
     </div>
     <!-- end popup psu -->    
-    <!-- popup case -->
-    <div class="modal fade" id="case" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- popup vo -->
+    <div class="modal fade" id="vo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
@@ -1456,8 +1456,8 @@
                 </div>
         
                 <div class="col-lg-8 col-sm-12">
-                  <div class="scroll-prdt" id="caselist">
-                  <div class="prdt bg-white mb-2" id="case1">
+                  <div class="scroll-prdt" id="volist">
+                  <div class="prdt bg-white mb-2" id="vo1">
                     <div class="row w-100">
                       <div class="col-lg-2 col-4 ">
                         <img
@@ -1479,7 +1479,7 @@
                       </div>
                       <div class="col-lg-4 col-12">
                         <div class="center-div">
-                          <button type="button" class="btn btn-warning btn-mobile-add" onclick="addCase(1)">
+                          <button type="button" class="btn btn-warning btn-mobile-add" onclick="addVo(1)">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
                             Chọn linh kiện
                           </button>
@@ -1487,7 +1487,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prdt bg-white mb-2"id="case2">
+                  <div class="prdt bg-white mb-2"id="vo2">
                     <div class="row w-100">
                       <div class="col-lg-2 col-4 ">
                         <img
@@ -1509,7 +1509,7 @@
                       </div>
                       <div class="col-lg-4 col-12">
                         <div class="center-div">
-                          <button type="button" class="btn btn-warning btn-mobile-add" onclick="addCase(2)">
+                          <button type="button" class="btn btn-warning btn-mobile-add" onclick="addVo(2)">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
                             Chọn linh kiện
                           </button>
@@ -1527,7 +1527,7 @@
         </div>
       </div>
     </div>
-    <!-- end popup case -->     
+    <!-- end popup vo -->     
 <script src="script.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
