--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">RAM - Bộ nhớ trong</h5>
+            <h5 class="modal-title" id="exampleModalLabel">VGA - Card màn hình</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -851,7 +851,7 @@
                       class="navbar-toggler"
                       type="button"
                       data-toggle="collapse"
-                      data-target="#navRam"
+                      data-target="#navVga"
                     >
                                             <span class=""
                         ><i
@@ -861,7 +861,7 @@
                         >  Tùy chọn</i
                       > </span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navRam">
+                    <div class="collapse navbar-collapse" id="navVga">
                         <div class="scroll-prdt">
 
                           <div class="brand-prdt mt-2 border-bottom">
@@ -1011,7 +1011,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">RAM - Bộ nhớ trong</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Ổ cứng - SSD - HDD</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -1025,7 +1025,7 @@
                       class="navbar-toggler"
                       type="button"
                       data-toggle="collapse"
-                      data-target="#navRam"
+                      data-target="#navSsd"
                     >
                                             <span class=""
                         ><i
@@ -1035,7 +1035,7 @@
                         >  Tùy chọn</i
                       > </span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navRam">
+                    <div class="collapse navbar-collapse" id="navSsd">
                         <div class="scroll-prdt">
 
                           <div class="brand-prdt mt-2 border-bottom">
@@ -1185,7 +1185,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">RAM - Bộ nhớ trong</h5>
+            <h5 class="modal-title" id="exampleModalLabel">PSU - Nguồn máy tính</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -1199,7 +1199,7 @@
                       class="navbar-toggler"
                       type="button"
                       data-toggle="collapse"
-                      data-target="#navRam"
+                      data-target="#navPsu"
                     >
                                             <span class=""
                         ><i
@@ -1209,7 +1209,7 @@
                         >  Tùy chọn</i
                       > </span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navRam">
+                    <div class="collapse navbar-collapse" id="navPsu">
                         <div class="scroll-prdt">
 
                           <div class="brand-prdt mt-2 border-bottom">
@@ -1359,7 +1359,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">RAM - Bộ nhớ trong</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Case - Vỏ máy tính</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -1373,7 +1373,7 @@
                       class="navbar-toggler"
                       type="button"
                       data-toggle="collapse"
-                      data-target="#navRam"
+                      data-target="#navVo"
                     >
                                             <span class=""
                         ><i
@@ -1383,7 +1383,7 @@
                         >  Tùy chọn</i
                       > </span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navRam">
+                    <div class="collapse navbar-collapse" id="navVo">
                         <div class="scroll-prdt">
 
                           <div class="brand-prdt mt-2 border-bottom">
