--- a/index.html
+++ b/index.html
@@ -10,9 +10,61 @@
 </head>
 <body>
 
-    <div class="">
-        <div class="container">
-            <table class="table table-striped table-bordered" >
+  <div class="container mb-5">
+    <img
+      src="https://dev.khoavang.vn/resources/uploads/Hung-bao-li-xi/banner-1698287834.png"
+      class="d-block w-100"
+      alt="banner"
+    />
+  </div>
+  <div class="container mb-5" >
+    <div class="row">
+      <div class="col-md-6">
+        <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100 rounded" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-giam150k.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 rounded" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-giam250K.png" alt="Second slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>
+        </div>
+      </div>
+  
+      <div class="col-md-6">
+        <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100 rounded" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-giam250K.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 rounded" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-30tr-giam-1tr.png" alt="Second slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+    <div class="container mb-5">
+      <div class="row">
+
+      <div class="col-md-10">
+        <div class="scroll-prdt ">
+            <table class="table table-striped table-bordered">
                 <tbody>
                   <tr>
                     <th scope="row" class="title-prd">1. CPU - BỘ VI XỬ LÝ</th>
@@ -127,9 +179,28 @@
                   </tr>
                 </tbody>
               </table>
+            </div>   
         </div>
+        <div class="col-md-2">
+          <div class="shadowed-div  rounded" >
+            <p class="text-center" style="margin-bottom: 0px;">Tổng tiền tạm tính:</p>
+            <p class="totalll" id="totalll">0đ</p>
+          </div>
+          <div class="d-flex justify-content-center mt-3">
+            <button type="button" class="btn btn-warning w-100 mb-1"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Mua ngay</button>
+          </div>
+          <div class="d-flex justify-content-center mt-1">
+            <button type="button" class="btn btn-info w-100 mb-1"><i class="fa fa-phone" aria-hidden="true"></i> Liên hệ tư vấn</button>
+          </div>
+          <div class="d-flex justify-content-center mt-1">
+            <button type="button" class="btn btn-secondary w-100 mb-1"><i class="fa fa-download" aria-hidden="true"></i> Tải cấu hình(PDF)</button>
+          </div>
+        </div>
+      </div>
     </div>
-
+    <div class="container bg-light" style="height: 500px;">
+      vì sao nên mua pc
+    </div>
     <!-- popup cpu -->
     <div class="modal fade" id="cpu" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -280,7 +351,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -310,7 +381,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -340,7 +411,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -370,7 +441,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -400,7 +471,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -572,7 +643,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -602,7 +673,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -632,7 +703,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -777,7 +848,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -807,7 +878,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -951,7 +1022,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -981,7 +1052,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1125,7 +1196,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1155,7 +1226,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1299,7 +1370,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1329,7 +1400,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1473,7 +1544,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1503,7 +1574,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1648,7 +1719,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1678,7 +1749,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1823,7 +1894,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1853,7 +1924,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -1997,7 +2068,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -2027,7 +2098,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -2171,7 +2242,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
@@ -2201,7 +2272,7 @@
                         </p>
                         <p class=" price-prdt">2.500.000đ</p>
                         <div class="d-flex align-items-center">
-                          <p class="line-through me-2">20.000.000đ</p>
+                          <p class="line-through me-2">20.000.000</p>
                           <p class="percent float-left percent">-25%</p>
                         </div>
                       </div>
