--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="container mb-5">
     <img
-      src="https://dev.khoavang.vn/resources/uploads/Hung-bao-li-xi/banner-1698287834.png"
+      src="https://nguyencongpc.vn/media/banner/13_Sepdcaa911ad2c13b0144afb49cc1ecf5b6.webp"
       class="d-block w-100"
       alt="banner"
     />
