--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
           <div class="d-flex justify-content-center mt-1">
             <button type="button" class="btn btn-secondary w-100 mb-1"><i class="fa fa-download" aria-hidden="true"></i> Tải cấu hình(PDF)</button>
           </div>
+          <div class="d-flex justify-content-center mt-1">
+            <button type="button" class="btn btn-danger w-100" onclick="deleteAll()"><i class="fa fa-trash" aria-hidden="true"></i> Xóa cấu hình</button>
+          </div>
+
         </div>
       </div>
     </div>
