--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
       </div>
     </div>
   </div>
-  
+    <h2 class="text-center mb-3"> XÂY DỰNG CẤU HÌNH PC THEO MONG MUỐN CỦA BẠN! </h2>
     <div class="container mb-5">
+
       <div class="row">
 
       <div class="col-md-10">
