--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <td>
                       <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#cpu" id="buttoncpu">
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                          Chọn Cpu - Bộ vi xử lý
+                          Chọn CPU - Bộ vi xử lý
                       </button>
                     <div id="selectedCpus" style="list-style-type: none;"></div>
 
@@ -83,7 +83,7 @@
                     <td>
                         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#main" id="buttonmain">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            Chọn Main - Bo mạch chủ
+                            Chọn MAIN - Bo mạch chủ
                           </button>
                           <div id="selectedMain" style="list-style-type: none;"></div>
                     </td>
@@ -93,7 +93,7 @@
                     <td>
                         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ram"id="buttonram">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            Chọn Ram - Bộ nhớ trong
+                            Chọn RAM - Bộ nhớ trong
                         </button>
                         <div id="selectedRam" style="list-style-type: none;"></div>
                     </td>
@@ -173,7 +173,7 @@
                     <td>
                         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#keyboard"id="buttonkeyboard">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            Chọn KEYBOARD - Bàn phím
+                            Chọn Keyboard - Bàn phím
                         </button>
                         <div id="selectedPhim" style="list-style-type: none;"></div>
                     </td>
