--- a/index.html
+++ b/index.html
@@ -292,6 +292,20 @@
                         <div id="selectedPhim" style="list-style-type: none;"></div>
                     </td>
                   </tr>
+                  <tr>
+                    <th scope="row" class="title-prd">12. KEYBOARD - BÀN PHÍM</th>
+                    <td>
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#keyboard"id="buttonsđkeyboard">
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                             Keyboard - Bàn phím: 
+                        </button>
+                        <div id="selectedPhsdim" style="list-style-type: none;"></div>
+                        <p>áđâsd</p>
+                        <p>áđâsd</p>
+                        <p>áđâsd</p>
+                        <p>áđâsd</p>
+                    </td>
+                  </tr>
                   <td colspan="2" style="height: 60px; text-align: center;">Xem thêm các phụ kiện dành cho PC tại <a href="https://khoavang.vn/phu-kien/c416">Khoavang.vn</a></td>
                 </tbody>
 
@@ -2937,7 +2951,8 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
   </body>
 </html>
